src/objects/copado__MC_Notification__mdt.object
<CustomObject>
    <description>This is the notification to be sent from Copado.</description>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, notification is avaiable for use</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <description>Description of the Notification</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Subject__c</fullName>
        <description>Subject of the notiication</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Template__c</fullName>
        <description>This is the body template of the notification</description>
        <label>Template</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>MC Notification</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>copado__Active__c</columns>
        <columns>copado__Subject__c</columns>
        <columns>copado__Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>MC Notifications</pluralLabel>
</CustomObject>